file renames, basic v-cloak usage

--- a/views/partials/searchresults DEPRECATED.handlebars
+++ b/views/partials/searchresults DEPRECATED.handlebars
@@ -1,3 +1,5 @@
+{{!-- replaced with vue templates in search.handlebars --}}
+
 {{#if noResults}}
   <div class="content-box">
     <div class="row">
