show user flagged-ness on search page

--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -154,9 +154,11 @@ Vue.component('user-result', {
 
             <template v-if="result.displayName" v-slot:title>
               <strong><a class="authorLink" v-bind:href="'/' + result.username">{{result.displayName}}</a></strong> &middot; <span class="text-muted">@{{result.username}}</span>
+              <i v-if="result.flagged" class="fas fa-exclamation-triangle text-danger"></i>
             </template>
             <template v-else v-slot:title>
               <strong><a class="authorLink" v-bind:href="'/' + result.username">@{{result.username}}</a></strong>
+              <i v-if="result.flagged" class="fas fa-exclamation-triangle text-danger"></i>
             </template>
 
             <template v-slot:description>
