fix typos, continue to roll out camelCase comp names

--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -1,3 +1,3 @@
 <div id="searchCont"></div>
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-<script src="/js/vue/searchPageEntry.js"></script>
+<script src="/js/vue/searchPage.js"></script>
