--- a/views/communities DEPRECATED.handlebars
+++ b/views/communities DEPRECATED.handlebars
@@ -1,3 +1,6 @@
+{{! Replaced by vueCommunities and its components}}
+
+
 <div id="homeBody" class="row justify-content-center">
   <div class="col-lg-8">
     <h3 class="page-header mx-2">Communities</h3>
