--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -46,6 +46,12 @@
   <link rel="stylesheet" href="/css/tribute.css" />
   <script src="/js/tribute.min.js" crossorigin="anonymous"></script>
 
+  {{#if initialPageState}}
+  <script type="application/json" id="initialPageState">
+    {{{initialPageState}}}
+  </script>
+  {{/if}}
+
   {{> clientSideCodeErrorReporter }}
 
   {{#if loggedIn}}
