Further attempts are continuing to be made

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -86,7 +86,7 @@
 {{> miscInteractivityScripts }}
 
 {{#if loggedIn}}
-<script src="/js/newPostOrCommentScripts.min.js"></script>
+<script src="/js/newPostOrCommentScripts.js"></script>
 {{/if}}
 
 </html>
