--- a/views/partials/votes.handlebars
+++ b/views/partials/votes.handlebars
@@ -56,7 +56,7 @@
             </p>
             {{#eq this.reference "image"}}
                 <div class="post-images one-image" style="margin-bottom:1rem;">
-                    <img class="post-single-image" src="/images/communities/staging/{{this.proposedValue}}"/>
+                    <img class="post-single-image" src="https://sweet-images.s3.amazonaws.com/communities/staging/{{this.proposedValue}}"/>
                 </div>
             {{else}}
             {{#eq this.reference "name"}}
