--- a/views/partials/usersidebar.handlebars
+++ b/views/partials/usersidebar.handlebars
@@ -3,7 +3,7 @@
   <div class="col-6 d-flex">
 {{/if}}
     <div id="profileImageContainer" class="{{#if isOwnProfile}}own-profile-image{{else}}user-image{{/if}}">
-      <img alt="Profile image for the user @{{ profileData.username}}" id="profileImage" src="{{#if profileData.imageEnabled}}/images/{{profileData.image}}{{else}}/images/cake.svg{{/if}}" />
+      <img alt="Profile image for the user @{{ profileData.username}}" id="profileImage" src="{{#if profileData.imageEnabled}}https://sweet-images.s3.amazonaws.com/{{profileData.image}}{{else}}/images/cake.svg{{/if}}" />
     </div>
 {{#if isOwnProfile}}
   </div>
@@ -119,7 +119,7 @@
     <h5>Trusts{{#gt trustedUserData.length 30}} <a class="user-list-toggle collapsed" href="#trustedUsersList" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="trustedUsersList"><i class="fas fa-caret-right"></i></a>{{/gt}}</h5>
     <div id="trustedUsersList" class="user-list{{#gt trustedUserData.length 30}} collapse{{else}} d-flex{{/gt}}">
       {{#each trustedUserData}}
-        <a href="/{{this.username}}" data-tooltip="@{{this.username}}" class="tooltip-top"><img src="{{#if this.imageEnabled}}/images/{{this.image}}{{else}}/images/cake.svg{{/if}}" /></a>
+        <a href="/{{this.username}}" data-tooltip="@{{this.username}}" class="tooltip-top"><img src="{{#if this.imageEnabled}}https://sweet-images.s3.amazonaws.com/{{this.image}}{{else}}/images/cake.svg{{/if}}" /></a>
       {{/each}}
       <div style="height:10px;width:100%;"></div>
     </div>
@@ -129,7 +129,7 @@
   <h5>Trusted by{{#gt usersWhoTrustThemData.length 30}} <a class="user-list-toggle collapsed" href="#trustedByUsersList" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="trustedByUsersList"><i class="fas fa-caret-right"></i></a>{{/gt}}</h5>
   <div id="trustedByUsersList" class="user-list{{#gt usersWhoTrustThemData.length 30}} collapse{{else}} d-flex{{/gt}}">
     {{#each usersWhoTrustThemData}}
-      <a href="/{{this.username}}" data-tooltip="@{{this.username}}" class="tooltip-top"><img src="{{#if this.imageEnabled}}/images/{{this.image}}{{else}}/images/cake.svg{{/if}}" /></a>
+      <a href="/{{this.username}}" data-tooltip="@{{this.username}}" class="tooltip-top"><img src="{{#if this.imageEnabled}}https://sweet-images.s3.amazonaws.com/{{this.image}}{{else}}/images/cake.svg{{/if}}" /></a>
     {{/each}}
     <div style="height:10px;width:100%;"></div>
   </div>
@@ -138,7 +138,7 @@
   <h5>Follows{{#gt followedUserData.length 30}} <a class="user-list-toggle collapsed" href="#followedUsersList" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="followedUsersList"><i class="fas fa-caret-right"></i></a>{{/gt}}</h5>
   <div id="followedUsersList" class="user-list{{#gt followedUserData.length 30}} collapse{{else}} d-flex{{/gt}}">
     {{#each followedUserData}}
-      <a href="/{{this.username}}" data-tooltip="@{{this.username}}" class="tooltip-top"><img src="{{#if this.imageEnabled}}/images/{{this.image}}{{else}}/images/cake.svg{{/if}}" /></a>
+      <a href="/{{this.username}}" data-tooltip="@{{this.username}}" class="tooltip-top"><img src="{{#if this.imageEnabled}}https://sweet-images.s3.amazonaws.com/{{this.image}}{{else}}/images/cake.svg{{/if}}" /></a>
     {{/each}}
     <div style="height:10px;width:100%;"></div>
   </div>
@@ -147,7 +147,7 @@
   <h5>Followed by{{#gt followersData.length 30}} <a class="user-list-toggle collapsed" href="#followersList" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="followersList"><i class="fas fa-caret-right"></i></a>{{/gt}}</h5>
   <div id="followersList" class="user-list{{#gt followersData.length 30}} collapse{{else}} d-flex{{/gt}}">
     {{#each followersData}}
-      <a href="/{{this.username}}" data-tooltip="@{{this.username}}" class="tooltip-top"><img src="{{#if this.imageEnabled}}/images/{{this.image}}{{else}}/images/cake.svg{{/if}}" /></a>
+      <a href="/{{this.username}}" data-tooltip="@{{this.username}}" class="tooltip-top"><img src="{{#if this.imageEnabled}}https://sweet-images.s3.amazonaws.com/{{this.image}}{{else}}/images/cake.svg{{/if}}" /></a>
     {{/each}}
     <div style="height:10px;width:100%;"></div>
   </div>
@@ -157,7 +157,7 @@
     <h5>Flagged users{{#gt flaggedUserData.length 30}} <a class="user-list-toggle collapsed" href="#flaggedUsersList" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="flaggedUsersList"><i class="fas fa-caret-right"></i></a>{{/gt}}</h5>
       <div id="flaggedUsersList" class="user-list{{#gt flaggedUserData.length 30}} collapse{{else}} d-flex{{/gt}}">
         {{#each flaggedUserData}}
-          <a href="/{{this.username}}" data-tooltip="@{{this.username}}" class="tooltip-top"><img src="{{#if this.imageEnabled}}/images/{{this.image}}{{else}}/images/cake.svg{{/if}}" /></a>
+          <a href="/{{this.username}}" data-tooltip="@{{this.username}}" class="tooltip-top"><img src="{{#if this.imageEnabled}}https://sweet-images.s3.amazonaws.com/{{this.image}}{{else}}/images/cake.svg{{/if}}" /></a>
         {{/each}}
         <div style="height:10px;width:100%;"></div>
       </div>
@@ -168,7 +168,7 @@
   <h5>Communities{{#gt communitiesData.length 30}} <a class="user-list-toggle collapsed" href="#communitiesList" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="communitiesList"><i class="fas fa-caret-right"></i></a>{{/gt}}</h5>
   <div id="communitiesList" class="user-list{{#gt communitiesData.length 30}} collapse{{else}} d-flex{{/gt}}">
     {{#each communitiesData}}
-      <a href="/community/{{this.slug}}" data-tooltip="{{this.name}}" class="tooltip-top"><img src="/images/communities/{{#if this.imageEnabled}}{{this.image}}{{else}}cake.svg{{/if}}" /></a>
+      <a href="/community/{{this.slug}}" data-tooltip="{{this.name}}" class="tooltip-top"><img src="{{#if this.imageEnabled}}https://sweet-images.s3.amazonaws.com/communities/{{this.image}}{{else}}/images/communities/cake.svg{{/if}}" /></a>
     {{/each}}
     <div style="height:10px;width:100%;"></div>
   </div>
