--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -45,6 +45,7 @@
   <script src="/js/bootbox.min.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/tribute.css" />
   <script src="/js/tribute.min.js" crossorigin="anonymous"></script>
+  <script src="/js/areyousure.js" crossorigin="anonymous"></script>
 
   {{> clientSideCodeErrorReporter }}
 
