--- a/views/partials/comment_dynamic.handlebars
+++ b/views/partials/comment_dynamic.handlebars
@@ -1,6 +1,6 @@
 <article class="comment" data-comment-id="{{comment_id}}" data-comment-depth="{{depth}}">
     <header>
-        <img alt="Profile image of @{{username}}" class="author-image" src="/images/{{image}}" />
+        <img alt="Profile image of @{{username}}" class="author-image" src="https://sweet-images.s3.amazonaws.com/{{image}}" />
         <div class="comment-header-container">
             <h3 class="author-name">
                 {{{name}}}
