--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -27,7 +27,7 @@
                                   {{#each userRecommendations}}
                                     <div class="user-list-icon">
                                         <a href="/{{this.username}}" data-tooltip="@{{this.username}}" class="tooltip-top" data-weight="{{this.weight}}">
-                                            <img src="{{#if this.imageEnabled}}/images/{{this.image}}{{else}}/images/cake.svg{{/if}}" />
+                                            <img src="{{#if this.imageEnabled}}https://sweet-images.s3.amazonaws.com/{{this.image}}{{else}}/images/cake.svg{{/if}}" />
                                         </a>
                                         <a href="#" class="hide-recommendation" data-type="user" data-target="{{this._id}}"><i class="fas fa-times-circle"></i></a>
                                     </div>
@@ -42,7 +42,7 @@
                                 <div class="user-list">
                                     {{#each popularCommunities}}
                                         <div class="user-list-icon">
-                                            <a href="/community/{{this.slug}}" data-tooltip="{{this.name}}" class="tooltip-top"><img src="/images/communities/{{#if this.imageEnabled}}{{this.image}}{{else}}cake.svg{{/if}}" /></a>
+                                            <a href="/community/{{this.slug}}" data-tooltip="{{this.name}}" class="tooltip-top"><img src="{{#if this.imageEnabled}}https://sweet-images.s3.amazonaws.com/{{this.image}}{{else}}/images/communities/cake.svg{{/if}}" /></a>
                                             <a href="#" class="hide-recommendation" data-type="community" data-target="{{this._id}}"><i class="fas fa-times-circle"></i></a>
                                         </div>
                                     {{/each}}
