--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -10,7 +10,7 @@
             <a class="nav-link{{#eq activePage 'notifications'}} active{{/eq}}" href="/notifications" id="notificationsPageLink"><span class="navbar-icon-notifications"></span><span class="screenreader-text"> Notifications </span><span class="notifications-count"></span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link{{#eq activePage loggedInUserData.username}} active{{/eq}}" href="/{{loggedInUserData.username}}"><img alt="Profile image for the user @{{ loggedInUserData.username}}" id="navbarProfileImage" src="{{#if loggedInUserData.imageEnabled}}/images/{{loggedInUserData.image}}{{else}}/images/cake.svg{{/if}}" {{#eq activePage loggedInUserData.username}}class="active"{{/eq}}/> <span class="screenreader-text"> Profile</span></a>
+            <a class="nav-link{{#eq activePage loggedInUserData.username}} active{{/eq}}" href="/{{loggedInUserData.username}}"><img alt="Profile image for the user @{{ loggedInUserData.username}}" id="navbarProfileImage" src="{{#if loggedInUserData.imageEnabled}}https://sweet-images.s3.amazonaws.com/{{loggedInUserData.image}}{{else}}/images/cake.svg{{/if}}" {{#eq activePage loggedInUserData.username}}class="active"{{/eq}}/> <span class="screenreader-text"> Profile</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link{{#eq activePage 'communities'}} active{{/eq}}" href="/communities"><span class="navbar-icon-communities"></span><span class="screenreader-text"> Communities</span></a>
@@ -58,7 +58,7 @@
           <div class="navbar-group" id="navbarRightGroup">
             <li class="nav-item dropdown">
               <a class="nav-link {{#eq activePage loggedInUserData.username}}active{{/eq}} dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <img alt="Profile image for the user @{{ loggedInUserData.username}}" id="navbarProfileImage" src="{{#if loggedInUserData.imageEnabled}}/images/{{loggedInUserData.image}}{{else}}/images/cake.svg{{/if}}" {{#eq activePage loggedInUserData.username}}class="active"{{/eq}}/> <span class="navbar-username">@{{loggedInUserData.username}}</span>
+                <img alt="Profile image for the user @{{ loggedInUserData.username}}" id="navbarProfileImage" src="{{#if loggedInUserData.imageEnabled}}https://sweet-images.s3.amazonaws.com/{{loggedInUserData.image}}{{else}}/images/cake.svg{{/if}}" {{#eq activePage loggedInUserData.username}}class="active"{{/eq}}/> <span class="navbar-username">@{{loggedInUserData.username}}</span>
               </a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown" id="userDropdownMenu">
                 <a class="dropdown-item" href="/{{loggedInUserData.username}}"><i class="fas fa-fw fa-user-circle"></i> profile</a>
