--- a/views/singlepost.handlebars
+++ b/views/singlepost.handlebars
@@ -45,7 +45,7 @@ $(function() {
     tribute = new Tribute({
       values: followers,
       menuItemTemplate: function (item) {
-        return '<img class="tribute-image" src="/images/'+item.original.image + '">' + item.string;
+        return '<img class="tribute-image" src="' + item.original.image + '">' + item.string;
       }
     })
   })
